# uon_rt

./: .gitignore  CMakeLists.txt  README.md  test_sim.py
demo/: attrl_debug.csv  debug_attrj  debug_attrj.cpp  debug_attrl  debug_attrl.cpp  debug_attrl_logic  debug_attrl_logic.cpp  debug_fk  debug_trapj  debug_trapj.cpp  demo_direct  fk_output.csv  gen_attrl_debug.csv  gen_integration_test.csv  gen_only_trapj.csv  plot_attrl.py  plot_debug.py  plot_gen.py  simulation_result.csv  test_api_attrj  test_api_attrj.cpp  test_api_attrl  test_api_attrl.cpp  test_api_trapj  test_api_trapj.cpp  test_generator_all  test_generator_all.cpp  test_generator_attrj.cpp  test_generator_only  test_generator_trapj.cpp  test_robot_full_rt.cpp  test_trajectory  test_trajectory.cpp  trajectory_data.csv
demo/api/attrj/: real_robot_attrj_data.csv
demo/api/attrl/: attrl_api.cpp  real_robot_attrl_data.csv
demo/api/mixer/: home_based_sequence_log.csv  mixer_api  mixer_api.cpp
demo/api/tcp_test/: tcp_sequence_test_log.csv  test_robot
demo/api/trapj/: compile.txt  real_robot_bench_data.csv  trapj_api  trapj_api.cpp
demo/generator/attractor/: attractor_test  plot_attractor.py
demo/generator/attrj/: attrj_bench_report.csv  attrj_debug_data.csv  attrj_generator  attrj_generator.cpp  attrj_roundtrip_data.csv  plot_attrj.py
demo/generator/attrl/: attrl_debug_detailed.csv  attrl_debug_report.csv  attrl_diagonal_test.csv  attrl_final_test.csv  attrl_generator  attrl_generator.cpp  attrl_z_move_data.csv  plot_attrl.py  test_robot  test_robot.cpp
demo/generator/ik/: ik_convergence_test.csv  ik_solver
demo/generator/trapj/: plot_trapj.py  trapj_bench_data.csv  trapj_debug_data.csv  trapj_generator  trapj_generator.cpp  trapj_reached_test.csv
demo/hcr14/real/: compile.txt
demo/hcr14/sim/: compile.txt
demo/m1013/real/: compile.txt
demo/m1013/sim/: compile.txt
demo/real/attrj/: attrj_api  attrj_api.cpp
demo/real/melon_picking_test/: test_robot.cpp
demo/real/mixer/: complex_sequence_log.csv  mixer_api.cpp
demo/real/tcp_test/: real_robot_joint_log.csv  test_robot  test_robot.cpp
demo/real/trapj/: real_robot_bench_data.csv  trapj_api
demo/sim/attractor/: atrractor.cpp  ghost_debug.csv
demo/sim/attrj/: attrj_debug_report.csv
demo/sim/attrl/: plot_attrl.py  robot_joint_data.csv  test_robot  test_robot.cpp
demo/sim/goal_reached_test/: goal_reached_fail_test.csv  goal_reached_test_data.csv  test_robot  test_robot.cpp
demo/sim/ik/: ik_solver.cpp
demo/sim/picking_test/: complex_sim_data.csv  plot_test.py  test_robot  test_robot.cpp
demo/sim/solve_forward/: test_robot  test_robot.cpp
demo/sim/tcp_test/: plot_test.py  tcp_axis_alignment.csv  tcp_cross_debug.csv  tcp_multi_test_data.csv  test_robot  test_robot.cpp
hcr/config/: config_rpc.ini
hcr/doc/manual/: clink__api_8h_source.html  clink__api__return__code_8h_source.html  clink__api__test__support_8h_source.html  clink__config_8h_source.html  clink__constant_8h_source.html  clink__def_8h_source.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_260eb02471c9c598e15d92b817a8706b.html  group_____a_p_i.html  group_____a_p_i.js  group_____a_p_i___r_e_t_u_r_n___c_o_d_e.html  group_____a_p_i___r_e_t_u_r_n___c_o_d_e.js  group_____c_b_o_x___e_x_t.html  group_____c_b_o_x___e_x_t.js  group_____c_b_o_x___i_o.html  group_____c_b_o_x___i_o.js  group_____c_b_o_x___s_a_f_e_t_y___m_o_d_u_l_e.html  group_____c_b_o_x___s_a_f_e_t_y___m_o_d_u_l_e.js  group_____c_o_n_s_t_a_n_t.html  group_____c_o_n_s_t_a_n_t.js  group_____c_o_n_t_r_o_l___b_o_x.html  group_____c_o_n_t_r_o_l___b_o_x.js  group_____g_e_n___c_b_o_x___i_o.html  group_____g_e_n___c_b_o_x___i_o.js  group_____j_u_s_t.html  group_____j_u_s_t.js  group_____m_o_t_i_o_n___c_o_m_m_a_n_d.html  group_____m_o_t_i_o_n___c_o_m_m_a_n_d.js  group_____r_o_b_o_t.html  (+52 more)
hcr/example/cpp/: CMakeLists.txt  example000_main.cpp
hcr/example/cpp/example001_move_joint/: CMakeLists.txt  example001_move_joint.cpp
hcr/example/cpp/example002_move_linear/: CMakeLists.txt  example002_move_linear.cpp
hcr/example/cpp/example003_move_circle/: CMakeLists.txt  example003_move_circle.cpp
hcr/example/cpp/example004_move_arc/: CMakeLists.txt  example004_move_arc.cpp
hcr/example/cpp/example005_move_circular/: CMakeLists.txt  example005_move_circular.cpp
hcr/example/cpp/example006_pause_resume/: CMakeLists.txt  example006_pause_resume.cpp
hcr/example/cpp/example007_stop/: CMakeLists.txt  example007_stop.cpp
hcr/example/cpp/example008_joint_jog/: CMakeLists.txt  example008_joint_jog.cpp
hcr/example/cpp/example009_linear_jog/: CMakeLists.txt  example009_linear_jog.cpp
hcr/example/cpp/example010_external_control/: CMakeLists.txt  example010_external_control.cpp
hcr/example/cpp/example011_weaving_motion/: CMakeLists.txt  example011_weaving_motion.cpp
hcr/example/cpp/example012_velocity_control/: CMakeLists.txt  example012_velocity_control.cpp
hcr/example/cpp/example013_user_move/: CMakeLists.txt  example013_user_move.cpp
hcr/example/cpp/example014_joint_angle_control/: CMakeLists.txt  example014_joint_angle_control.cpp
hcr/include/: clink_api_rpc.h  clink_constant.h
hcr/scripts/: cmake_example.sh
rt_bind/: CMakeLists.txt  binding.cpp  rt_bind.cpp
rt_bind/core/: rtb_core.hpp  rtb_robot_base.hpp
rt_bind/trajectory/: rtb_trajectory_generator.hpp
rt_control/: dsr_robot.hpp  rt.hpp  rt_control.hpp  rt_data.hpp  rt_enum.hpp  rt_robot.hpp  sim_robot.hpp  timer.hpp
rt_control/core/: core.hpp  robot_base.hpp  robot_factory.hpp
rt_control/dsr/: dsr.hpp  dsr_data.hpp  dsr_enum.hpp  dsr_robot.hpp
rt_control/hcr/: hcr.hpp  hcr_robot.hpp
rt_control/model/: hcr14.hpp  m1013.hpp  model.hpp
rt_control/trajectory/: trajectory.hpp  trajectory_attrj.hpp  trajectory_attrl.hpp  trajectory_generator.hpp  trajectory_playj.hpp  trajectory_stop.hpp  trajectory_trapj.hpp
rt_py/: __init__.py  debug_sim.py  dsenum.py  epdlxj  robot.py  rtdata.py  rtenum.py  test_all.py  test_generator.py  test_pick_place.py  test_pick_place_sim.py  test_real.py  test_robot.py  test_sim.py  trajectory.py
(+205 files in other folders)
